// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test render ExpenseList with empty messages array 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses found
      </span>
    </div>
  </div>
</div>
`;

exports[`Test render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={100}
      createdAt={0}
      description="voda"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={134500}
      createdAt={-345600000}
      description="plin"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={345100}
      createdAt={345600000}
      description="struja"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
